# Snap2Serve

./: package-lock.json
backend/: .env.example  README.md  requirements.txt
backend/app/: main.py
backend/app/routers/: agent.py  upload.py  vision.py
backend/app/services/: claude_service.py  nutrition_service.py
frontend/: .gitignore  GESTURE_GATE_README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/components/: GestureGateModal.tsx  LoadingMinigame.tsx
frontend/app/context/: GestureGateContext.tsx
frontend/app/hooks/: useHandTracking.ts
frontend/app/lib/: gesture-wasm.ts
frontend/app/minigame/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/recipe/: page.tsx
frontend/app/results/: page.tsx
frontend/app/signup/: page.tsx
frontend/gesture-wasm/: Cargo.toml  build.ps1
frontend/gesture-wasm/src/: lib.rs
frontend/lib/: AuthContext.tsx  EmoteDetector.ts  firebase.ts
postman/globals/: workspace.postman_globals.json
services/nutrition-calculator-cs/: .gitignore  Dockerfile  Models.cs  NutritionService.csproj  Program.cs  README.md  nutrition_db.json
services/preprocess-go/: Dockerfile  README.md  go.mod
services/preprocess-go/cmd/preprocess/: main.go
vision/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt  test_ui.html
vision/app/: extract.py  main.py  normalize.py  synonyms.json
