[package]
name = "gesture-wasm"
version = "0.1.0"
edition = "2021"
description = "Gesture recognition state machine for Snap2Serve Gesture Gate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
